add edit to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>Document</title>
 </head>
 <body>
+    <audio controls>
+        <source src="audio.mp3" type="mp3">
+        <source src="audio.ogg" type="ogg">
+        <source src="audio.wav" type="wav">
+    </audio>
+
+    <video controls>
+        <source src="video.mp4" type="mp4">
+        <source src="video.avi" type="avi">
+    </video>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/9e9tBfxa20k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
     <a href="./index.html">Gallery</a>
 </body>
 </html>
