--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/9e9tBfxa20k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-    <a href="./index.html">Gallery</a>
+    <a href="./gallery.html">Gallery</a>
 </body>
 </html>
